Augmenting Gatherer tests to include default implementation in Stream